--- a/.screenrc
+++ b/.screenrc
@@ -46,11 +46,9 @@ zombie "q^M"
 source ~/.screen/keybind
 
 # emacs用の環境変数をセット
-setenv SCREEN_ID $STY
+#setenv SCREEN_ID $STY
+sessionname $STYID
 
 # 初期状態を作成
 source ~/.screen/init
 
-
-#screen emacs -nw --eval "(let () (setq server-name \"em_$STY\")(server-start))"
-#screen
