--- a/.screenrc
+++ b/.screenrc
@@ -1,54 +1,1 @@
-# 現在の背景色で消去する
-# http://blog.remora.cx/2010/02/gnu-screen-1.html
-defbce on
-
-term xterm-256color
-
-shell /bin/zsh
-
-startup_message off
-
-# なんか表示するときの色
-sorendition "= KW"
-
-# キャプション
-caption always "%?%F%{= yk}%?%n %t%="
-
-# ハードステータス
-hardstatus alwayslastline "%w%=%Y-%m-%d %c:%s"
-
-#defutf8 on
-#defkanji utf-8
-#encoding utf-8 utf-8
-#defencoding utf-8
-
-# コピーモード時の設定
-defscrollback 8195
-
-# http://www.google.co.jp/url?sa=t&rct=j&q=bindkey%2B%2522-m%2522%2Bscreen&source=web&cd=3&ved=0CC0QFjAC&url=http%3A%2F%2Fwww.gentei.org%2F~yuuji%2Frec%2Fpc%2F.screenrc&ei=RcGmTvL8GsLOmAWchonYDw&usg=AFQjCNFngazS4GlAKbqS4Bpzz4aQQBNHDg&sig2=7wjYMrEw5uoxfzPLYQwAXg
-### 隠れているwindowでbellが鳴ったときにメッセージ。
-bell " Bell in window %."
-
-### 隠れているwindowで動きがあったときのメッセージ
-activity "Activity in window %."
-
-# 別画面サポート less使うときとかに
-# http://d.hatena.ne.jp/edvakf/20110311/1299793959
-altscreen on
-
-# 端末が落ちたら自動的に detach
-autodetach on
-
-# プロセス終了時にメッセージを表示
-zombie "q^M"
-
-# キーバインド設定の読み込み
-source ~/.screen/keybind
-
-# emacs用の環境変数をセット
-#setenv SCREEN_ID $STY
-sessionname $STYID
-
-# 初期状態を作成
-source ~/.screen/init
-
+.screen/.screenrc
